--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
                 <configuration>
                     <url>http://localhost:8080/manager/text</url>
                     <server>tomcat</server>
-                    <path>/javabank5</path>
+                    <path>/frozenShop</path>
                 </configuration>
             </plugin>
             <plugin>
